# ShearDeformation

./: CMakeLists.txt  Makefile  README.md  plot_boundary.py  viewer3d.cpp
Results/L_list/: L_list_sphere.txt
cmake/: FindLIBIGL.cmake
lib/: CMakeLists.txt  ComputeCoefficient.cpp  ComputeCoefficient.h  Equadprog.cpp  Equadprog.h  ExternalEnergy.cpp  ExternalEnergy.h  FindFirstFundamentalCoef.cpp  FindFirstFundamentalCoef.h  GeometryFeature.cpp  GeometryFeature.h  GravityEnergy.cpp  GravityEnergy.h  IfoptSolver.cpp  IfoptSolver.h  LSQR.cpp  LSQR.h  MeshConnection.cpp  MeshConnection.h  ShellEnergy.cpp  ShellEnergy.h  ShellEnergyMatrixI.cpp  ShellEnergyMatrixI.h  ShellEnergyStandard.cpp  ShellEnergyStandard.h  ShellEnergyWithSwellRatio.cpp  ShellEnergyWithSwellRatio.h  ShellSimulation.cpp  ShellSimulation.h  eiquadprog.h  elliptic_functions.cpp  elliptic_functions.h  simulation.cpp  simulation.h
